--- a/.github/workflows/deploy_frontend.yaml
+++ b/.github/workflows/deploy_frontend.yaml
@@ -6,11 +6,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      # Add any build steps here. For example:
-      # - run: npm ci && npm run build
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - run: npm i -g @angular/cli@17
+      - run: cd frontend && ng build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          repoToken: "${{ secrets.GITHUB_TOKEN }}"
-          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}"
-          expires: 30d
-          projectId: your-Firebase-project-ID
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_EASVCHAT }}'
+          projectId: easvchat
