--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -11,6 +11,12 @@
       "prefix": "app",
       "architect": {
         "build": {
+          "fileReplacements": [
+            {
+              "replace": "src/environments/environment.ts",
+              "with": "src/environments/environment.prod.ts"
+            }
+          ],
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": "dist/frontend",
