--- a/.github/workflows/deploy_api.yaml
+++ b/.github/workflows/deploy_api.yaml
@@ -20,7 +20,7 @@ jobs:
           usedocker: false
           appdir: "Api"
         env:
-          HD_AZ_VISION: ${{secrets.HD_AZ_VISION}}
-          HD_AZ_CONTENT_FILTER: ${{secrets.HD_AZ_CONTENT_FILTER}}
-          HD_JWT_KEY: ${{secrets.HD_JWT_KEY_}}
-          HD_PG_CONN: ${{secrets.HD_PG_CONN}}
+          HD_AZ_VISION: ${{secrets.AZ_VISION}}
+          HD_AZ_CONTENT_FILTER: ${{secrets.AZ_CONTENT_FILTER}}
+          HD_JWT_KEY: ${{secrets.JWT_KEY_}}
+          HD_PG_CONN: ${{secrets.PG_CONN}}
