Revert "disable angular optimization"
This reverts commit 8aebca21e211ed335405ed34cd10f73e915ef34f.

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -11,6 +11,7 @@
       "prefix": "app",
       "architect": {
         "build": {
+
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": "dist/frontend",
@@ -51,8 +52,7 @@
                   "maximumError": "4kb"
                 }
               ],
-              "outputHashing": "all",
-              "optimization": false
+              "outputHashing": "all"
             },
             "development": {
               "optimization": false,
