--- a/.github/workflows/deploy_api.yaml
+++ b/.github/workflows/deploy_api.yaml
@@ -22,5 +22,5 @@ jobs:
         env: #only the key names below should be prefixed HD_ and the ${{secrets.NAME}} should not
           HD_AZ_VISION: ${{secrets.AZ_VISION}}
           HD_AZ_CONTENT_FILTER: ${{secrets.AZ_CONTENT_FILTER}}
-          HD_JWT_KEY: ${{secrets.JWT_KEY_}}
+          HD_JWT_KEY: ${{secrets.JWT_KEY}}
           HD_PG_CONN: ${{secrets.PG_CONN}}
