--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
         <PackageReference Include="Dapper" Version="2.1.28"/>
         <PackageReference Include="JWT" Version="10.1.1"/>
+        <PackageReference Include="MQTTnet" Version="4.3.3.952" />
         <PackageReference Include="Npgsql" Version="8.0.1"/>
         <PackageReference Include="Npgsql.DependencyInjection" Version="8.0.1"/>
         <PackageReference Include="Serilog" Version="3.1.1"/>
